# rust-poem-cheat-sheet

./: .env  .gitignore  Cargo.toml
migrations/: 20241119043811_create_todo.sql
src/: lib.rs  security.rs  utils.rs
src/routes/: example.rs  mod.rs  other_auth_route.rs  todo.rs
src/schema/: common.rs  example.rs  mod.rs  todo.rs
src/tests/: example.rs  mod.rs  other_auth_route.rs  paralel.rs  serial.rs  todo.rs  utils.rs
