[package]
name = "try-poem"
version = "0.1.0"
edition = "2021"
default-run = "main"

[dependencies]
poem = {version = "3", features = ["test"] }
poem-openapi = { version = "5", features = ["swagger-ui"]}
serde = "1.0"
serde_json = "1.0"
serial_test = "3.2.0"
sqlx = { version = "0.8", features = [ "sqlite", "runtime-tokio", "macros"]}
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"
